Signed-off-by: tuan nguyen <tuandtvt88@gmail.com>

--- a/thoi-khoa-bieu.html
+++ b/thoi-khoa-bieu.html
@@ -19,8 +19,12 @@
               text-align: center;
               padding: 8px;
           }
-          tr:nth-child() {
-              background-color: crimson;
+          tr:nth-child(1) {
+            background-color: red;
+            color: white;
+          } tr:nth-child(2) {
+            background-color: red;
+            color: white;
           }
           </style>
         <tr>
